[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "buddy-pal-buddy"
description = "A tomogachi like game for the raspberry pi and the sense HAT"

authors = [
  {name = "Drwhomust", email = "rabbids8008@gmail.com"}
]
maintainers = [
  {name = "Drwhomust", email = "rabbids8008@gmail.com"}
]

requires-python = ">=3"

version = "0.1.0"

dependencies = [
  "sense_hat"
]

readme = "README.md"

license = "CC0 1.0 Universal"
license-files = ["LICENSE"]

keywords = ["tamagotchi", "raspberry pi", "pi", "sense hat"]


classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Other Audience",
  "Intended Audience :: Developers",
"Intended Audience :: Education",

  "Topic :: Games/Entertainment :: Simulation"

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/Drwhomust/buddy-pal-buddy"
Issues = "https://github.com/Drwhomust/buddy-pal-buddy/issues"

[project.scripts]
buddy-cli = "buddy:main"

[project.optional-dependencies]
emu = ["sense-emu"]
